Harden wait and cleanup failure paths
Shutdown and restore paths now consume interrupts while they complete
bounded rendezvous, then restore the caller's interrupt status. Logging
and WAL purge recovery release queue cursors and locks on every failure
path.

Regression tests cover production-mode abandoned log records, mid-wait
interrupts, partial WAL scans, and allocation-failure cleanup. The suite
drops allocation assertions that cannot detect regressions under CI's C2
compiler.

Benchmark launchers enable native access explicitly, and Rust tests cover
the platform sleep boundary.