@@ -76,9 +76,11 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.lang.reflect.Field;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
 import java.util.Properties;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
@@ -99,6 +101,34 @@ public class LogFactoryTest {
                 Assert.assertEquals("Class not found com.questdb.log.StdOutWriter2", e.getMessage());
             }
         }
+    }
+
+    @Test
+    public void testConsecutiveAbandonedRecordsDoNotBlockProductionQueue() throws Exception {
+        File javaExecutable = new File(new File(System.getProperty("java.home"), "bin"), "java");
+        if (!javaExecutable.exists()) {
+            javaExecutable = new File(javaExecutable.getPath() + ".exe");
+        }
+        final String classPath = Paths.get(
+                ProductionModeLogRecordMain.class.getProtectionDomain().getCodeSource().getLocation().toURI()
+        ) + File.pathSeparator + Paths.get(
+                LogFactory.class.getProtectionDomain().getCodeSource().getLocation().toURI()
+        );
+        final Process process = new ProcessBuilder(
+                javaExecutable.getAbsolutePath(),
+                "--enable-native-access=ALL-UNNAMED",
+                "--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED",
+                "-cp",
+                classPath,
+                ProductionModeLogRecordMain.class.getName()
+        ).redirectErrorStream(true).start();
+        if (!process.waitFor(15, TimeUnit.SECONDS)) {
+            process.destroyForcibly();
+            process.waitFor();
+            Assert.fail("production-mode log regression process timed out");
+        }
+        final String output = new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
+        Assert.assertEquals(output, 0, process.exitValue());
     }
 
     @Test
@@ -404,6 +434,77 @@ public class LogFactoryTest {
     }
 
     @Test
+    public void testLogSequenceIsReleasedWhenAbandonedErrorRefreshThrows() throws Exception {
+        TestUtils.assertMemoryLeak(() -> {
+            final AtomicReference<SCSequence> consumerSequence = new AtomicReference<>();
+            try (LogFactory factory = new LogFactory()) {
+                factory.add(new LogWriterConfig(LogLevel.INFO, (ring, seq, level) -> {
+                    consumerSequence.set(seq);
+                    return new LogWriter() {
+                        @Override
+                        public void bindProperties(LogFactory factory) {
+                        }
+
+                        @Override
+                        public boolean run(@NotNull WorkerContext workerContext) {
+                            return false;
+                        }
+                    };
+                }));
+                factory.bind();
+
+                final Log logger = factory.create("x");
+                final LogRecord record = logger.info();
+                record.$();
+
+                final SCSequence sequence = consumerSequence.get();
+                long cursor = sequence.next();
+                Assert.assertEquals(0, cursor);
+                sequence.done(cursor);
+
+                final Class<?> recordClass = record.getClass();
+                final Field abandonedErrorField = recordClass.getDeclaredField("abandonedLogRecordError");
+                final long abandonedErrorOffset = Unsafe.objectFieldOffset(abandonedErrorField);
+                final Object originalError = Unsafe.getUnsafe().getObject(record, abandonedErrorOffset);
+                final RuntimeException stackTraceFailure = new RuntimeException("stack trace failure");
+                final AtomicBoolean isArmed = new AtomicBoolean();
+                final LogError throwingError = new LogError("throwing abandoned-record error", false) {
+                    @Override
+                    public synchronized Throwable fillInStackTrace() {
+                        if (isArmed.get()) {
+                            throw stackTraceFailure;
+                        }
+                        return this;
+                    }
+                };
+                isArmed.set(true);
+                Unsafe.putObject(record, abandonedErrorOffset, throwingError);
+                try {
+                    logger.info();
+                    Assert.fail("expected abandoned-record stack refresh to fail");
+                } catch (RuntimeException e) {
+                    Assert.assertSame(stackTraceFailure, e);
+                } finally {
+                    Unsafe.putObject(record, abandonedErrorOffset, originalError);
+                }
+
+                final Field isLogRecordInProgressField = recordClass.getDeclaredField("isLogRecordInProgress");
+                isLogRecordInProgressField.setAccessible(true);
+                Assert.assertFalse(isLogRecordInProgressField.getBoolean(record));
+
+                cursor = sequence.next();
+                Assert.assertEquals(1, cursor);
+                sequence.done(cursor);
+
+                logger.info().$("after failure").$();
+                cursor = sequence.next();
+                Assert.assertEquals(2, cursor);
+                sequence.done(cursor);
+            }
+        });
+    }
+
+    @Test
     public void testLogSequenceIsReleasedWhenRecoveryEolThrows() throws Exception {
         TestUtils.assertMemoryLeak(() -> {
             final AtomicReference<SCSequence> consumerSequence = new AtomicReference<>();
@@ -425,19 +526,7 @@ public class LogFactoryTest {
 
                 final Log logger = factory.create("x");
                 final LogRecord record = logger.info();
-                final RuntimeException messageFailure = new RuntimeException("message failure");
-                final Throwable throwable = new Throwable() {
-                    @Override
-                    public String getMessage() {
-                        throw messageFailure;
-                    }
-                };
-                try {
-                    record.$(throwable);
-                    Assert.fail("expected Throwable.getMessage() to fail");
-                } catch (RuntimeException e) {
-                    Assert.assertSame(messageFailure, e);
-                }
+                record.$(new Throwable("abandoned"));
 
                 final Class<?> recordClass = record.getClass();
                 final Field dejaVuField = recordClass.getDeclaredField("dejaVu");
@@ -477,6 +566,128 @@ public class LogFactoryTest {
                 logger.info().$("after recovery").$();
                 final long cursor = sequence.next();
                 Assert.assertEquals(2, cursor);
+                sequence.done(cursor);
+            }
+        });
+    }
+
+    @Test
+    public void testLogSequenceIsReleasedWhenRecoveryMarkerThrows() throws Exception {
+        TestUtils.assertMemoryLeak(() -> {
+            final AtomicReference<SCSequence> consumerSequence = new AtomicReference<>();
+            try (LogFactory factory = new LogFactory()) {
+                factory.add(new LogWriterConfig(LogLevel.INFO, (ring, seq, level) -> {
+                    consumerSequence.set(seq);
+                    return new LogWriter() {
+                        @Override
+                        public void bindProperties(LogFactory factory) {
+                        }
+
+                        @Override
+                        public boolean run(@NotNull WorkerContext workerContext) {
+                            return false;
+                        }
+                    };
+                }));
+                factory.bind();
+
+                final Log logger = factory.create("x");
+                final LogRecord record = logger.info();
+                record.$(new Throwable("abandoned"));
+
+                final Class<?> recordClass = record.getClass();
+                final Field dejaVuField = recordClass.getDeclaredField("dejaVu");
+                dejaVuField.setAccessible(true);
+                final Set<?> dejaVu = (Set<?>) dejaVuField.get(record);
+                Assert.assertEquals(1, dejaVu.size());
+
+                final RuntimeException markerFailure = new RuntimeException("marker failure");
+                final RuntimeException eolFailure = new RuntimeException("EOL failure");
+                final Field sinkField = recordClass.getDeclaredField("sink");
+                sinkField.setAccessible(true);
+                sinkField.set(record, new LogRecordUtf8Sink(0, 0) {
+                    @Override
+                    public Utf8Sink putAscii(CharSequence cs) {
+                        throw markerFailure;
+                    }
+
+                    @Override
+                    public Utf8Sink putEOL() {
+                        throw eolFailure;
+                    }
+                });
+
+                try {
+                    logger.info();
+                    Assert.fail("expected abandoned-record marker to fail");
+                } catch (RuntimeException e) {
+                    Assert.assertSame(markerFailure, e);
+                    Assert.assertArrayEquals(new Throwable[]{eolFailure}, e.getSuppressed());
+                }
+
+                Assert.assertTrue(dejaVu.isEmpty());
+                final Field isLogRecordInProgressField = recordClass.getDeclaredField("isLogRecordInProgress");
+                isLogRecordInProgressField.setAccessible(true);
+                Assert.assertFalse(isLogRecordInProgressField.getBoolean(record));
+
+                final SCSequence sequence = consumerSequence.get();
+                for (int expectedCursor = 0; expectedCursor < 2; expectedCursor++) {
+                    final long cursor = sequence.next();
+                    Assert.assertEquals(expectedCursor, cursor);
+                    sequence.done(cursor);
+                }
+
+                logger.info().$("after recovery").$();
+                final long cursor = sequence.next();
+                Assert.assertEquals(2, cursor);
+                sequence.done(cursor);
+            }
+        });
+    }
+
+    @Test
+    public void testLogSequenceIsReleasedWhenThrowableRenderingThrows() throws Exception {
+        TestUtils.assertMemoryLeak(() -> {
+            final AtomicReference<SCSequence> consumerSequence = new AtomicReference<>();
+            try (LogFactory factory = new LogFactory()) {
+                factory.add(new LogWriterConfig(LogLevel.INFO, (ring, seq, level) -> {
+                    consumerSequence.set(seq);
+                    return new LogWriter() {
+                        @Override
+                        public void bindProperties(LogFactory factory) {
+                        }
+
+                        @Override
+                        public boolean run(@NotNull WorkerContext workerContext) {
+                            return false;
+                        }
+                    };
+                }));
+                factory.bind();
+
+                final Log logger = factory.create("x");
+                final RuntimeException messageFailure = new RuntimeException("message failure");
+                final Throwable throwable = new Throwable() {
+                    @Override
+                    public String getMessage() {
+                        throw messageFailure;
+                    }
+                };
+                try {
+                    logger.info().$(throwable);
+                    Assert.fail("expected Throwable.getMessage() to fail");
+                } catch (RuntimeException e) {
+                    Assert.assertSame(messageFailure, e);
+                }
+
+                final SCSequence sequence = consumerSequence.get();
+                long cursor = sequence.next();
+                Assert.assertEquals(0, cursor);
+                sequence.done(cursor);
+
+                logger.info().$("after failure").$();
+                cursor = sequence.next();
+                Assert.assertEquals(1, cursor);
                 sequence.done(cursor);
             }
         });
@@ -1127,49 +1338,51 @@ public class LogFactoryTest {
     }
 
     @Test
-    public void testThrowableCauseIsNotCircularAcrossRecords() {
-        // Regression test for the dejaVu clear in AsyncLogRecord.$(): the set used to
-        // retain every Throwable a carrier thread ever logged, so a cause shared with
-        // an earlier record printed as [CIRCULAR REFERENCE] instead of its stack trace.
-        try (LogFactory factory = new LogFactory()) {
-            final StringSink sink = new StringSink();
-            SOCountDownLatch latch = new SOCountDownLatch(1);
+    public void testThrowableCauseIsNotCircularAcrossRecords() throws Exception {
+        TestUtils.assertMemoryLeak(() -> {
+            // Regression test for the dejaVu clear in AsyncLogRecord.$(): the set used to
+            // retain every Throwable a carrier thread ever logged, so a cause shared with
+            // an earlier record printed as [CIRCULAR REFERENCE] instead of its stack trace.
+            try (LogFactory factory = new LogFactory()) {
+                final StringSink sink = new StringSink();
+                SOCountDownLatch latch = new SOCountDownLatch(1);
 
-            factory.add(new LogWriterConfig(LogLevel.ALL, (ring, seq, level) -> new LogWriter() {
-                @Override
-                public void bindProperties(LogFactory factory) {
-                }
+                factory.add(new LogWriterConfig(LogLevel.ALL, (ring, seq, level) -> new LogWriter() {
+                    @Override
+                    public void bindProperties(LogFactory factory) {
+                    }
 
-                @Override
-                public boolean run(@NotNull WorkerContext workerContext) {
-                    return seq.consumeAll(ring, this::log);
-                }
+                    @Override
+                    public boolean run(@NotNull WorkerContext workerContext) {
+                        return seq.consumeAll(ring, this::log);
+                    }
 
-                private void log(LogRecordUtf8Sink record) {
-                    sink.put((Sinkable) record);
-                    latch.countDown();
-                }
-            }));
+                    private void log(LogRecordUtf8Sink record) {
+                        sink.put((Sinkable) record);
+                        latch.countDown();
+                    }
+                }));
 
-            factory.bind();
-            factory.startThread();
-            Log logger = factory.create("x");
+                factory.bind();
+                factory.startThread();
+                Log logger = factory.create("x");
 
-            Exception cause = new RuntimeException("shared cause");
-            logger.error().$("first").$(new RuntimeException("wrapper 1", cause)).$();
-            latch.await();
-            latch.setCount(1);
-            logger.error().$("second").$(new RuntimeException("wrapper 2", cause)).$();
-            latch.await();
+                Exception cause = new RuntimeException("shared cause");
+                logger.error().$("first").$(new RuntimeException("wrapper 1", cause)).$();
+                latch.await();
+                latch.setCount(1);
+                logger.error().$("second").$(new RuntimeException("wrapper 2", cause)).$();
+                latch.await();
 
-            String out = sink.toString();
-            Assert.assertFalse("shared cause degraded to a circular reference: " + out,
-                    out.contains("[CIRCULAR REFERENCE"));
-            int first = out.indexOf("Caused by: java.lang.RuntimeException: shared cause");
-            Assert.assertTrue("cause missing from the first record: " + out, first > -1);
-            Assert.assertTrue("cause missing from the second record: " + out,
-                    out.indexOf("Caused by: java.lang.RuntimeException: shared cause", first + 1) > first);
-        }
+                String out = sink.toString();
+                Assert.assertFalse("shared cause degraded to a circular reference: " + out,
+                        out.contains("[CIRCULAR REFERENCE"));
+                int first = out.indexOf("Caused by: java.lang.RuntimeException: shared cause");
+                Assert.assertTrue("cause missing from the first record: " + out, first > -1);
+                Assert.assertTrue("cause missing from the second record: " + out,
+                        out.indexOf("Caused by: java.lang.RuntimeException: shared cause", first + 1) > first);
+            }
+        });
     }
 
     @Test
